gitops/base/udm-deploy.yaml
---
# Source: open5gs-5gcore-helm/templates/udm-deploy.yaml
apiVersion: v1
kind: Service
metadata:
  name: open5gs-udm
  labels:
    epc-mode: udm
spec:
  selector:
    epc-mode: udm
  ports:
    - protocol: TCP
      port: 8099
      targetPort: http2
---
# Source: open5gs-5gcore-helm/templates/udm-deploy.yaml
apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
kind: Deployment
metadata:
  name: open5gs-udm-deployment
  labels:
    epc-mode: udm
spec:
  replicas: 1
  selector:
    matchLabels:
      epc-mode: udm
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: "true"
      labels:
        epc-mode: udm
    spec:   
      serviceAccountName: 5gcore
      containers:
        - name: udm
          image: "quay.io/xymox/open5gs-ubi8:latest"
          imagePullPolicy: Always
          command: ["open5gs-udmd", "-c", "/open5gs/config-map/udm.yaml"]
          ports:
          - containerPort: 8099
            name: http2
          volumeMounts:
          - name: open5gs-udm-config
            mountPath: /open5gs/config-map/udm.yaml
            subPath: "udm.yaml"
      volumes:
        - name: open5gs-udm-config
          configMap:
            name: open5gs-udm-config
